--- a/driverrehab/public/index.html
+++ b/driverrehab/public/index.html
@@ -25,6 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -40,6 +42,11 @@
       To create a production bundle, use `npm run build` or `yarn build`.
 
     -->
+    <script type="text/javascript">
+       (function(){
+          emailjs.init(process.env.REACT_APP_USER_ID);
+       })();
+    </script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
