--- a/public/index.html
+++ b/public/index.html
@@ -42,11 +42,8 @@
       To create a production bundle, use `npm run build` or `yarn build`.
 
     -->
-    <script type="text/javascript">
-       (function(){
-          emailjs.init(process.env.REACT_APP_USER_ID);
-       })();
-    </script>
+    <script src="node_modules/eruda/eruda.min.js"></script>
+    <script>eruda.init();</script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
